[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bres-cycles"
version = "0.1.0"
description = "BRES: Bayesian Ritual Encoding System — cycle detection and classifier"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = [
  "typer>=0.12",
]

[project.scripts]
bres = "bres_cycles.plugin:app"